# ft_ls

./: CMakeLists.txt  Makefile  author
includes/: ft_ls.h
libft/: Makefile
libft/ft_printf/: ft_printf.h
libft/inc/: get_next_line.h  libft.h
libft/src/conv/: ft_itoa.c
libft/src/lines/: get_next_line.c
libft/src/lst/: ft_push_ptr.c  ft_strnewnull.c
libft/src/put/: ft_lprintf.c
libft/src/str/: ft_strdel.c  ft_strdup.c  ft_strndup.c
src/: ft_ls.c  main.c
src/t_file/: file_add.c  file_del.c  file_dir.c  file_ini.c  file_len.c  file_srt.c  file_swp.c
src/t_path/: path_add.c  path_del.c  path_len.c  path_srt.c
src/utils/: cmp_ts_n.c  create_file.c  delete_files.c
src/utils/print/: print_date.c  print_entry.c  print_list.c  print_name.c  print_perm.c  print_type.c
