cmake_minimum_required(VERSION 3.10)
project(42_ft_ls_master C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/ft_printf)
include_directories(libft/inc)

add_executable(42_ft_ls_master
        includes/ft_ls.h
        includes/t_file.h
        includes/t_path.h
        libft/ft_printf/ft_printf.c
        libft/ft_printf/ft_printf.h
        libft/ft_printf/pf_base.c
        libft/ft_printf/pf_ftoa.c
        libft/ft_printf/pf_len.c
        libft/ft_printf/pf_options.c
        libft/ft_printf/pf_parsing.c
        libft/ft_printf/pf_put.c
        libft/ft_printf/pf_router.c
        libft/ft_printf/pf_struct.c
        libft/ft_printf/pf_utils.c
        libft/inc/get_next_line.h
        libft/inc/libft.h
        libft/src/char/ft_isalnum.c
        libft/src/char/ft_isalpha.c
        libft/src/char/ft_isascii.c
        libft/src/char/ft_isdigit.c
        libft/src/char/ft_isprint.c
        libft/src/char/ft_tolower.c
        libft/src/char/ft_toupper.c
        libft/src/conv/ft_atoi.c
        libft/src/conv/ft_itoa.c
        libft/src/conv/ft_swap.c
        libft/src/lines/ft_count_word.c
        libft/src/lines/ft_getlines.c
        libft/src/lines/get_next_line.c
        libft/src/lst/ft_lstadd.c
        libft/src/lst/ft_lstdel.c
        libft/src/lst/ft_lstdelone.c
        libft/src/lst/ft_lstiter.c
        libft/src/lst/ft_lstmap.c
        libft/src/lst/ft_lstnew.c
        libft/src/lst/ft_lstrev.c
        libft/src/math/ft_clamp.c
        libft/src/math/ft_isprime.c
        libft/src/math/ft_iterative_power.c
        libft/src/math/ft_sqrt.c
        libft/src/mem/ft_bzero.c
        libft/src/mem/ft_memalloc.c
        libft/src/mem/ft_memccpy.c
        libft/src/mem/ft_memchr.c
        libft/src/mem/ft_memcmp.c
        libft/src/mem/ft_memcpy.c
        libft/src/mem/ft_memdel.c
        libft/src/mem/ft_memmove.c
        libft/src/mem/ft_memrchr.c
        libft/src/mem/ft_memset.c
        libft/src/put/ft_putchar.c
        libft/src/put/ft_putchar_fd.c
        libft/src/put/ft_putendl.c
        libft/src/put/ft_putendl_fd.c
        libft/src/put/ft_putnbr.c
        libft/src/put/ft_putnbr_fd.c
        libft/src/put/ft_putstr.c
        libft/src/put/ft_putstr_fd.c
        libft/src/str/ft_findchr.c
        libft/src/str/ft_strcat.c
        libft/src/str/ft_strchr.c
        libft/src/str/ft_strclr.c
        libft/src/str/ft_strcmp.c
        libft/src/str/ft_strcpy.c
        libft/src/str/ft_strdel.c
        libft/src/str/ft_strdup.c
        libft/src/str/ft_strequ.c
        libft/src/str/ft_striter.c
        libft/src/str/ft_striteri.c
        libft/src/str/ft_strjoin.c
        libft/src/str/ft_strlcat.c
        libft/src/str/ft_strlen.c
        libft/src/str/ft_strlower.c
        libft/src/str/ft_strmap.c
        libft/src/str/ft_strmapi.c
        libft/src/str/ft_strncat.c
        libft/src/str/ft_strncmp.c
        libft/src/str/ft_strncpy.c
        libft/src/str/ft_strndup.c
        libft/src/str/ft_strnequ.c
        libft/src/str/ft_strnew.c
        libft/src/str/ft_strnstr.c
        libft/src/str/ft_strrchr.c
        libft/src/str/ft_strsplit.c
        libft/src/str/ft_strstr.c
        libft/src/str/ft_strsub.c
        libft/src/str/ft_strtrim.c
        src/t_file/file_add.c
        src/t_file/file_del.c
        src/t_file/file_dir.c
        src/t_file/file_ini.c
        src/t_file/file_len.c
        src/t_file/file_srt.c
        src/t_file/file_swp.c
        src/t_path/path_add.c
        src/t_path/path_del.c
        src/t_path/path_len.c
        src/t_path/path_srt.c
        src/t_path/path_swp.c
        src/utils/print/print_date.c
        src/utils/print/print_entry.c
        src/utils/print/print_list.c
        src/utils/print/print_name.c
        src/utils/print/print_perm.c
        src/utils/print/print_type.c
        src/utils/cmp_ts_n.c
        src/utils/create_file.c
        src/utils/delete_files.c
        src/ft_ls.c
        src/main.c libft/src/put/ft_lprintf.c)
